# ChessEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
ChessEngine/: CMakeLists.txt  definition.h  main.cpp
ChessEngine/Controller/: CMakeLists.txt  Controller.cpp  Controller.h
ChessEngine/Core/: Ai.cpp  Ai.h  CMakeLists.txt  Core.cpp  Core.h
ChessEngine/Io/: CMakeLists.txt  Io.cpp  Io.h
include/chess/: board.h  console_ui.h  game.h  notation.h  sdl_ui.h  types.h
src/: board.cpp  console_ui.cpp  game.cpp  main.cpp  notation.cpp  sdl_main.cpp  sdl_ui.cpp
